style.scss
@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap");

$brightRed: hsl(12, 88%, 59%);
$darkBlue: hsl(228, 39%, 23%);

$darkGrayishBlue: hsl(227, 12%, 61%);
$veryDarkBlue: hsl(233, 12%, 13%);
$veryPaleRed: hsl(13, 100%, 96%);
$veryLightGray: hsl(0, 0%, 98%);
:root {
  --swiper-theme-color: hsl(12, 88%, 59%);
}

@mixin m-q($arg) {
  @media screen and (max-width: $arg) {
    @content;
  }
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

img {
  display: block;
  max-width: 100%;
}

a {
  text-decoration: none;
  display: inline-block;
}

body {
  font-family: "Be Vietnam", sans-serif;
  font-size: 1.6rem;
  color: $darkBlue;
  overflow-x: hidden;
}

.container {
  width: 100%;
  max-width: 115rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.main-btn {
  background: $brightRed;
  padding: 1.2rem 3.5rem;
  border-radius: 2.5rem;
  color: $veryLightGray;
  text-transform: capitalize;
  font-weight: 500;
  transition: 0.3s;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);

  &:hover {
    opacity: 0.9;
  }
}

.navbar {
  padding: 7.2rem 0;
  position: relative;
  z-index: 1;

  &__navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__nav-trigger {
    border: none;
    background: transparent;
    display: none;
    cursor: pointer;

    @include m-q(770px) {
      display: inline-block;
      position: fixed;
      right: 2rem;
      &:focus {
        outline: 1px solid $brightRed;
        outline-offset: 0.3rem;
      }
    }
  }

  &__nav-list {
    list-style: none;
    display: flex;

    @include m-q(770px) {
      flex-direction: column;
      position: fixed;
      top: 168px;
      width: calc(100% - 4rem);
      text-align: center;
      padding: 2rem 0;
      border-radius: 0.5rem;
      transform: scale(0);
      transition: 0.3s;
    }
  }

  .navbar__nav-list.active {
    transform: scale(1);
    background: white;
  }

  &__nav-item {
    margin: 0 1rem;

    @include m-q(650px) {
      margin: 0.8rem;
    }
  }

  &__nav-link {
    color: $darkBlue;
    padding: 0.5rem;
    font-size: 1.6rem;
    font-weight: 500;
    position: relative;
    transition: 0.3s;

    &:hover {
      color: $darkGrayishBlue;
    }

    @include m-q(770px) {
      font-weight: 700;
    }
  }

  &__main-btn {
    @include m-q(900px) {
      display: none;
    }
  }
}

.navbar.active {
  &::before {
    content: "";
    position: fixed;
    left: -2rem;
    right: -2rem;
    bottom: 0;
    height: 100vh;
    background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.1),
      rgba(0, 0, 0, 0.5)
    );
  }
}

.header {
  position: relative;
  margin-bottom: 18rem;

  @include m-q(750px) {
    margin-bottom: 10rem;
  }

  &::before {
    content: "";
    position: absolute;
    background-image: url(/images/bg-tablet-pattern.svg);
    background-size: contain;
    background-position: right;
    width: 100%;
    min-height: 814px;
    background-repeat: no-repeat;
    z-index: -1;
    top: -370px;
    right: -170px;

    @include m-q(1200px) {
      top: -390px;
      right: -370px;
    }

    @include m-q(1200px) {
      top: -420px;
      right: -430px;
    }

    @include m-q(750px) {
      right: -80px;
      top: -410px;
    }
  }

  &__content {
    display: flex;

    @include m-q(750px) {
      flex-direction: column-reverse;
      text-align: center;
    }
  }

  &__left,
  &__right {
    flex: 1 1 0;
  }

  &__heading {
    padding-top: 3rem;
    font-size: 5.4rem;
    max-width: 44rem;
    margin-bottom: 3rem;
    line-height: 1.3;
    font-weight: 700;

    @include m-q(1200px) {
      font-size: 5rem;
    }
    @include m-q(900px) {
      font-size: 4.5rem;
    }

    @include m-q(750px) {
      font-size: 3.5rem;
      text-align: center;
      max-width: 100%;
    }
  }

  &__heading-text {
    max-width: 35rem;
    margin-bottom: 3rem;
    color: $darkGrayishBlue;
    line-height: 1.7;

    @include m-q(750px) {
      text-align: center;
      max-width: 100%;
    }
  }

  &__right {
    position: relative;
  }

  &__chart-img {
    position: absolute;
    right: -19px;
    top: 0;

    @include m-q(750px) {
      position: relative;
      right: 0;
      margin: 0 auto;
    }
  }
}

.about-us {
  position: relative;
  margin-bottom: 18rem;

  @include m-q(550px) {
    margin-bottom: 10rem;
  }

  &::before {
    content: "";
    position: absolute;
    background-image: url(/images/bg-tablet-pattern.svg);
    background-size: contain;
    background-position: left;
    width: 100%;
    height: 814px;
    background-repeat: no-repeat;
    z-index: -1;
    left: -510px;
    top: 280px;

    @include m-q(550px) {
      left: 240px;
      top: -590px;
    }
  }

  &__content {
    display: flex;

    @include m-q(750px) {
      display: block;
    }
  }

  &__left,
  &__right {
    flex: 1 1 0;
  }

  &__heading {
    font-size: 3.8rem;
    max-width: 42rem;
    margin-bottom: 3rem;
    line-height: 1.4;

    @include m-q(750px) {
      font-size: 3rem;
      max-width: 100%;
      text-align: center;
    }
  }

  &__description {
    max-width: 33rem;
    color: $darkGrayishBlue;

    @include m-q(750px) {
      max-width: 100%;
      text-align: center;
      margin-bottom: 5rem;
      line-height: 1.7;
      font-size: 1.5rem;
    }
  }

  &__feature-title {
    display: flex;
    align-items: center;
    padding: 2rem 0;

    @include m-q(750px) {
      min-height: 3.5rem;
      margin-bottom: 2rem;
      padding: 0;
      width: calc(100% + 2rem);
      background: $veryPaleRed;
      border-top-left-radius: 2.5rem;
      border-bottom-left-radius: 2.5rem;
    }
  }

  &__counter-container {
    width: 11rem;
    @include m-q(750px) {
      width: 8rem;
    }
  }

  &__feature-counter {
    padding: 0.6rem 2.5rem;

    box-shadow: unset;
    &:hover {
      opacity: unset;
    }
  }

  &__feature-heading {
    font-size: 1.6rem;

    @include m-q(750px) {
      font-size: 1.4rem;
    }
  }

  &__feature-description {
    margin-left: 11rem;
    margin-bottom: 2rem;
    color: $darkGrayishBlue;
    line-height: 1.7;

    @include m-q(750px) {
      margin-left: 0;
      font-size: 1.3rem;
      margin-bottom: 4rem;
    }
  }
}

.simplify {
  width: 100%;
  background-image: url(/images/bg-simplify-section-desktop.svg);
  background-repeat: no-repeat;
  background-position: 250px -130px;
  background-color: $brightRed;
  min-height: 22rem;

  @include m-q(750px) {
    background-image: url(/images/bg-simplify-section-mobile.svg);
    background-position: left center;
    padding: 5rem 0;
  }

  @include m-q(550px) {
    padding: 10rem 0;
  }

  &__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 22rem;

    @include m-q(750px) {
      display: block;
      text-align: center;
    }
  }

  &__heading {
    color: $veryLightGray;
    font-size: 3.8rem;
    max-width: 44rem;

    @include m-q(750px) {
      max-width: 100%;
      text-align: center;
      margin-bottom: 2rem;
    }
  }

  .main-btn--light {
    color: $brightRed;
    background-color: $veryLightGray;
    font-weight: 700;
  }
}

.testimonials-slider {
  text-align: center;
  position: relative;
  z-index: 0;

  .slider-heading {
    text-align: center;
    font-size: 3.8rem;
    margin-bottom: 5rem;

    @include m-q(770px) {
      font-size: 3rem;
    }
  }

  .testimonial {
    margin: 0 auto;
    background: $veryLightGray;
    max-width: 55rem;
    width: 100%;
    padding: 5rem 3rem;
    text-align: center;
    position: relative;

    &__img {
      width: 7rem;
      height: 7rem;
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
      top: -35px;
    }

    &__name {
      padding-top: 2rem;
      margin-bottom: 2rem;
    }

    &__text {
      color: $darkGrayishBlue;
      line-height: 1.8;
    }
  }

  .main-btn--testimonial {
    text-align: center;
    margin: 4rem 0 18rem;

    @include m-q(770px) {
      margin-bottom: 4rem;
    }
  }
}

.swiper-container {
  padding: 4rem 2rem 8rem;
}

.swiper-pagination {
  display: none;

  @include m-q(770px) {
    display: block;
  }
}

.swiper-pagination-bullet {
  background: transparent;
  opacity: 1;
  border: 1px;
  border-color: $brightRed;
  border-style: solid;
}

.swiper-pagination-bullet-active {
  background: var(--swiper-theme-color);
}

.footer {
  position: relative;
  background-color: $veryDarkBlue;
  padding: 6rem 0;

  @include m-q(770px) {
    padding-bottom: 10rem;
  }

  &__cols {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 270px;
    column-gap: 1rem;
    color: $veryLightGray;

    @include m-q(770px) {
      grid-template-columns: 1fr 1fr;
    }
  }

  &__col {
    display: flex;
    flex-direction: column;
    min-height: 11rem;
    justify-content: space-between;
  }

  &__col:nth-child(1) {
    @include m-q(770px) {
      grid-column: 1/3;
      grid-row: 3/4;
      flex-direction: column-reverse;
      align-items: center;
    }
  }

  &__col:nth-child(2) {
    @include m-q(770px) {
      margin: 0 auto 3rem;
    }
  }

  &__col:nth-child(3) {
    justify-content: start;

    @include m-q(770px) {
      margin: 0 auto 3rem;
    }
  }
  &__col:nth-child(4) {
    align-items: flex-end;

    @include m-q(770px) {
      grid-column: 1/3;
      grid-row: 1/2;
    }
  }

  &__social-list {
    display: flex;
    list-style: none;

    @include m-q(770px) {
      align-self: stretch;
      justify-content: space-evenly;
      flex-wrap: wrap;
    }
  }

  &__social-item {
    margin-right: 1.5rem;

    @include m-q(770px) {
      margin: 0 1rem;
    }
  }

  &__social-link {
    transition: 0.3s;
    font-size: 2rem;
    color: $veryLightGray;

    @include m-q(770px) {
      font-size: 3.5rem;
    }

    &:hover {
      color: $brightRed;
    }
  }

  &__link {
    align-self: flex-start;
    transition: 0.3s;
    padding: 0.5rem;
    color: $veryLightGray;

    &:hover {
      color: $brightRed;
    }

    @include m-q(770px) {
      font-size: 1.4rem;
    }
  }

  &__form {
    display: flex;
    justify-content: space-between;
    width: 100%;
    position: relative;

    @include m-q(770px) {
      justify-content: center;
      flex-wrap: wrap;
    }
  }

  &__email-input {
    height: 100%;
    width: 20rem;
    border-radius: 2.5rem;
    border: none;
    padding: 1rem 1.5rem;
    border: 1px solid transparent;
    font-family: "Be Vietnam", sans-serif;
    font-size: 1.2rem;

    @include m-q(770px) {
      margin-right: 1rem;
      width: 24rem;
    }
    @include m-q(370px) {
      margin-right: 1rem;
      width: unset;
    }
  }

  &__email-input--error {
    color: $brightRed;
    border: 1px solid $brightRed;
  }

  &__email-input::placeholder {
    color: $darkGrayishBlue;
  }

  &__email-error {
    position: absolute;
    top: 110%;
    color: $brightRed;
    padding-left: 1.5rem;
    font-size: 1rem;

    @include m-q(770px) {
      margin-left: 0;
    }
  }

  &__email-error--success {
    color: green;
  }

  &__submit-btn {
    border: none;
    cursor: pointer;
    padding-right: 2rem;
    padding-left: 2rem;
  }

  &__copyright {
    color: $darkGrayishBlue;
    font-size: 1.4rem;

    @include m-q(770px) {
      position: absolute;
      width: 100%;
      left: 50%;
      transform: translateX(-50%);
      top: 88%;
      padding: 0 2rem;
      margin: 0 auto;
      text-align: center;
    }
  }

  .attribution {
    position: absolute;
    width: 100%;
    left: 50%;
    transform: translateX(-50%);
    top: 93%;
    padding: 0 2rem;
    margin: 0 auto;
    text-align: center;
  }
}

